[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "promptvault"
version = "1.0.0"
description = "Manage, version and log LLM prompts as plain YAML files."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Gonçalo Torres", email = "gon.im.torres@gmail.com" }]
keywords = ["llm", "prompt", "prompt-engineering", "ai", "openai", "anthropic", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/IAMTorres/promptvault"
Repository = "https://github.com/IAMTorres/promptvault"
Issues = "https://github.com/IAMTorres/promptvault/issues"

[tool.setuptools.packages.find]
where = ["src"]
